# gm

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  rust.yml
common/: Cargo.toml
common/src/: erc20.rs  error.rs  lib.rs  secret.rs  text_truncate.rs  tx_meta.rs
macos/: Cargo.toml  README.md
macos/src/: auth.rs  error.rs  keychain.rs  lib.rs  macos.rs
ratatui-extra/: Cargo.toml
ratatui-extra/src/: act.rs  error.rs  event.rs  extensions.rs  lib.rs  testutils.rs  thematize.rs  widgets.rs
ratatui-extra/src/tests/: boolean_input.rs  button.rs  candle_chart.rs  confirm_popup.rs  cursor.rs  filter_select.rs  filter_select_popup.rs  form.rs  input_box.rs  line_chart.rs  mod.rs  popup.rs  scroll_bar.rs  select.rs  text_interactive.rs  text_popup.rs  toast.rs
ratatui-extra/src/widgets/: boolean_input.rs  button.rs  candle_chart.rs  confirm_popup.rs  cursor.rs  filter_select.rs  filter_select_owned.rs  filter_select_popup.rs  form.rs  input_box.rs  input_box_owned.rs  line_chart.rs  popup.rs  scroll_bar.rs  select.rs  select_owned.rs  text_interactive.rs  text_popup.rs  text_scroll.rs  toast.rs
rpc-proxy/: Cargo.toml
rpc-proxy/examples/: server-async.rs  server.rs
rpc-proxy/src/: error.rs  lib.rs  rpc_types.rs  serve.rs
src/: account.rs  actions.rs  address_book.rs  alchemy.rs  blockscout.rs  cli.rs  config.rs  disk.rs  error.rs  gm.rs  lib.rs  main.rs  network.rs  sign_message.rs  store.rs  traits.rs  transaction.rs  tui.rs  utils.rs
src/actions/: account.rs  address_book.rs  balances.rs  config.rs  receive_payment.rs  send_message.rs  setup.rs  sign_message.rs  transaction.rs
src/cli/: account.rs  handlers.rs  mod.rs  transaction.rs
src/tui/: app.rs  controller.rs  events.rs  impls.rs  theme.rs  traits.rs  views.rs
src/tui/app/: pages.rs  widgets.rs
src/tui/app/pages/: account.rs  account_create.rs  account_import.rs  address_book.rs  address_book_create.rs  address_book_display.rs  asset_transfer.rs  assets.rs  complete_setup.rs  config.rs  dev_key_capture.rs  fusion_plus.rs  main_menu.rs  network.rs  network_create.rs  receive_payment.rs  send_message.rs  setup.rs  sign_message.rs  text.rs  token.rs  token_create.rs  trade.rs  transaction.rs  walletconnect.rs
src/tui/app/widgets/: address_book_popup.rs  assets_popup.rs  button.rs  candle_chart.rs  confirm_popup.rs  filter_select.rs  filter_select_popup.rs  footer.rs  form.rs  input_box.rs  invite_popup.rs  networks_popup.rs  popup.rs  popup_ok.rs  scroll_bar.rs  select.rs  sidebar.rs  sign_712_popup.rs  sign_popup.rs  sign_typed_data_popup.rs  text_popup.rs  text_scroll.rs  title.rs  tx_popup.rs
src/tui/controller/: navigation.rs
src/tui/events/: assets.rs  eth_price.rs  helios.rs  input.rs  recent_addresses.rs
src/tui/views/: body.rs  components.rs  footer.rs  left.rs  title.rs
src/tui/views/body/: left.rs  right.rs
src/tui/views/components/: filter_select.rs  form.rs  input_box.rs  select.rs
src/utils/: account.rs  assets.rs  cursor.rs  eip712.rs  fs_keystore.rs  text.rs
tui/: Cargo.toml
tui/src/: app.rs  demo.rs  error.rs  events.rs  impls.rs  lib.rs  pages.rs  post_handle_event.rs  theme.rs  threads.rs  traits.rs  widgets.rs
tui/src/app/: pages.rs  widgets.rs
tui/src/app/pages/: account.rs  account_create.rs  account_import.rs  address_book.rs  address_book_create.rs  address_book_display.rs  asset_transfer.rs  assets.rs  complete_setup.rs  config.rs  dev_key_capture.rs  main_menu.rs  network.rs  network_create.rs  send_message.rs  sign_message.rs  text.rs  token.rs  token_create.rs  trade.rs  walletconnect.rs
tui/src/app/widgets/: address_book_popup.rs  assets_popup.rs  button.rs  confirm_popup.rs  cursor.rs  filter_select.rs  filter_select_popup.rs  footer.rs  form.rs  input_box.rs  invite_popup.rs  networks_popup.rs  popup.rs  select.rs  sidebar.rs  sign_popup.rs  sign_typed_data_popup.rs  text_popup.rs  text_scroll.rs  title.rs  tx_popup.rs
tui/src/events/: assets.rs  eth_price.rs  helios.rs  input.rs  recent_addresses.rs
tui/src/pages/: account.rs  account_create.rs  account_import.rs  address_book.rs  address_book_create.rs  address_book_display.rs  asset_transfer.rs  assets.rs  complete_setup.rs  config.rs  deploy_popup.rs  dev_key_capture.rs  footer.rs  invite_popup.rs  main_menu.rs  network.rs  network_create.rs  send_message.rs  shell.rs  sign_message.rs  sign_popup.rs  sign_tx_popup.rs  sign_typed_data_popup.rs  text.rs  title.rs  token.rs  token_create.rs  trade.rs  tx_popup.rs  walletconnect.rs
tui/src/threads/: assets.rs  input.rs  tick.rs
utils/: Cargo.toml
utils/src/: account.rs  address_book.rs  alchemy.rs  alloy.rs  assets.rs  async.rs  config.rs  disk.rs  disk_storage.rs  eip712.rs  erc20.rs  error.rs  etherscan.rs  historic_balances.rs  inquire.rs  lib.rs  log.rs  network.rs  price_manager.rs  provider.rs  reqwest.rs  serde.rs  shutdown.rs  sourcify.rs  text.rs  text_segment.rs  text_wrap.rs  tx.rs
