[package]
name = "gm-tui"
version = "0.0.1"
edition = "2021"
description = "TUI-based Ethereum wallet"
license = "MIT"
repository = "https://github.com/zemse/gm"
keywords = ["crypto", "blockchain", "ethereum", "tui", "wallet"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE*"]

[lib]
name = "gm_lib"
path = "src/lib.rs"

[[bin]]
name = "gm"
path = "src/bin/gm.rs"

[dependencies]
# CLI
clap = { version = "4.0", features = ["derive"] }
figlet-rs = "0.1"
inquire = "0.7"
strum = "0.26"
strum_macros = "0.26"
tui-qrcode = "0.1.1"
qrcode = "0.12"
indicatif = "0.17"

# Ethereum
alloy = { version = "1", features = ["full", "rlp", "signer-mnemonic"] }
coins-bip39 = "0.12.0"
rand = "0.8"

# macOS
core-foundation = "0.10"
core-foundation-sys = "0.8.6"
security-framework = "3.2"

# file system
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_plain = "1.0.2"
toml = "0.8"
serde_yaml = "0.9.34"
directories = "5.0"

#tui
crossterm = "0.29.0"
ratatui = "0.29.0"

# misc
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
rayon = "1.8"
coins-bip32 = "0.12.0"
humantime = "2.2.0"
chrono = "0.4.41"
url = "2.5.4"
serde_path_to_error = "0.1.17"
data3 = "0.2.0"
walletconnect-sdk = "0.2.1"
helios-ethereum = { package = "zemse-helios-ethereum", version = "0.9" }
eyre = "0.6"
textwrap = "0.16.2"