[workspace]
resolver = "2"
members = ["bin", "common", "macos", "tui", "utils"]

[workspace.dependencies]
alloy = { version = "1", features = ["full", "rlp", "signer-mnemonic"] }
thiserror = "2.0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json"] }