[workspace]
resolver = "2"
members = ["bin", "common", "macos", "ratatui-extra", "rpc-proxy", "tui", "utils"]

[workspace.dependencies]
alloy = { version = "1", features = ["full", "rlp", "signer-mnemonic", "eip712"] }
thiserror = "2.0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = "0.7.16"
console = "0.16.1"
ratatui = "0.29.0"
crossterm = "0.29.0"
strum = "0.26"
strum_macros = "0.26"
walletconnect-sdk = "0.2.2"
url = "2.5.4"
reqwest = { version = "0.11", features = ["json"] }