[package]
name = "gm-ratatui-extra"
version = "0.0.2-alpha"
edition = "2021"

[dependencies]
ratatui = { workspace = true }
alloy = { workspace = true }
tokio = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
console = { workspace = true }
url = { workspace = true }

gm-utils = { path = "../utils" }

chrono = "0.4.41"
