[package]
name = "gm-tui"
version = "0.0.1"
edition = "2021"
description = "TUI-based Ethereum wallet"
license = "MIT"
repository = "https://github.com/zemse/gm"
keywords = ["crypto", "blockchain", "ethereum", "tui", "wallet"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE*"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
gm-common = { path = "../common" }
gm-utils = { path = "../utils" }
gm-macos = { path = "../macos" }
gm-ratatui-extra = { path = "../ratatui-extra" }

# CLI
clap = { version = "4.0", features = ["derive"] }
figlet-rs = "0.1"
inquire = "0.7"
tui-qrcode = "0.1.1"
qrcode = "0.12"
indicatif = "0.17"

# Ethereum
alloy = { workspace = true }


#tui
crossterm = { workspace = true }
ratatui = { workspace = true }

# misc
tokio = { workspace = true }

humantime = "2.2.0"
url = "2.5.4"
data3 = "0.2.0"
walletconnect-sdk = "0.2.2"
helios-ethereum = { package = "zemse-helios-ethereum", version = "0.9" }
eyre = "0.6"
reqwest = { workspace = true }