[package]
name = "gm-tui"
version = "0.0.1"
edition = "2021"
description = "TUI-based Ethereum wallet"
license = "MIT"
repository = "https://github.com/zemse/gm"
keywords = ["crypto", "blockchain", "ethereum", "tui", "wallet"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE*"]

[features]
default = []
demo = []  

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
gm-common = { path = "../common" }
gm-utils = { path = "../utils" }
gm-ratatui-extra = { path = "../ratatui-extra" }
gm-rpc-proxy = { path = "../rpc-proxy" }

# Ethereum
alloy = { workspace = true }
walletconnect-sdk = { workspace = true }

#tui
crossterm = { workspace = true }
ratatui = { workspace = true }

# misc
tokio = { workspace = true }
url = { workspace = true }
humantime = "2.2.0"
data3 = "0.2.0"
helios-ethereum = { package = "zemse-helios-ethereum", version = "0.9" }
eyre = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
gm-macos = { path = "../macos" }